tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0093/input.js
"use strict"; (a, a) => 42
